// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThumbnailWidget snapshots snapshots: renders as expected with a thumbnail provided 1`] = `
<injectIntl(ShimmedIntlComponent)
  title="Thumbnail"
>
  <Stack
    direction="horizontal"
    gap={3}
  >
    <Image
      alt="Image used as thumbnail for video"
      src="sOMeUrl"
    />
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`ThumbnailWidget snapshots snapshots: renders as expected with a thumbnail provided 2`] = `
<injectIntl(ShimmedIntlComponent)
  title="Thumbnail"
>
  <Stack
    direction="horizontal"
    gap={3}
  >
    <Image
      alt="Image used as thumbnail for video"
      src="sOMeUrl"
    />
    <OverLayTrigger
      key="top"
      overlay={
        <ToolTip>
          <FormattedMessage
            defaultMessage="Delete"
            description="Message presented to user for action to delete thumbnail"
            id="authoring.videoeditor.thumbnail.deleteThumbnail"
          />
        </ToolTip>
      }
      placement="top"
    >
      <IconButton
        className="d-inline-block"
        iconAs="Icon"
        onClick={[Function]}
      />
    </OverLayTrigger>
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`ThumbnailWidget snapshots snapshots: renders as expected with default props 1`] = `
<injectIntl(ShimmedIntlComponent)
  title="Thumbnail"
>
  <Stack
    gap={3}
  >
    <FormattedMessage
      defaultMessage="Upload an image for learners to see before playing the video."
      description="Message for adding thumbnail"
      id="authoring.videoeditor.thumbnail.upload.message"
    />
    <Alert
      variant="info"
    >
      <FormattedMessage
        defaultMessage="Images must have an aspect ration of 16:9 (1280x720 px recommended)"
        description="Message for thumbnail aspectRequirements"
        id="authoring.videoeditor.thumbnail.upload.aspectRequirements"
      />
    </Alert>
    <FileInput
      acceptedFiles=".gif,.jpg,.jpeg,.png,.bmp"
      fileInput={
        Object {
          "addFile": [Function],
          "click": [Function],
          "ref": Object {
            "current": undefined,
          },
        }
      }
    />
    <Button
      onClick={[Function]}
      variant="link"
    >
      <FormattedMessage
        defaultMessage="Upload Thumbnail"
        description="Label for upload button"
        id="authoring.videoeditor.thumbnail.upload.label"
      />
    </Button>
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;
